--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+
+/* .blank{
+  color: red;
+} */
+/* .cantainer{
+  width: 600px;
+  margin-left: 200px;
+} */
+
